RESOLVED FIXED200293
REGRESSION (r240942): first visually non-empty layout milestone is not reached in media documents until after the video finishes loading
https://bugs.webkit.org/show_bug.cgi?id=200293
Summary REGRESSION (r240942): first visually non-empty layout milestone is not reache...
Andy Estes
Reported 2019-07-30 22:33:48 PDT Comment hidden (obsolete)
Attachments
Patch (3.60 KB, patch)
2019-07-30 22:34 PDT, Andy Estes
no flags
Patch (25.99 KB, patch)
2019-07-31 17:16 PDT, Andy Estes
no flags
Patch (21.91 KB, patch)
2019-07-31 17:22 PDT, Andy Estes
no flags
Patch (21.93 KB, patch)
2019-07-31 19:51 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2019-07-30 22:34:31 PDT Comment hidden (obsolete)
Andy Estes
Comment 2 2019-07-30 22:34:32 PDT
EWS Watchlist
Comment 3 2019-07-30 22:36:06 PDT Comment hidden (obsolete)
Andy Estes
Comment 4 2019-07-31 17:16:22 PDT Comment hidden (obsolete)
Andy Estes
Comment 5 2019-07-31 17:22:15 PDT
Alex Christensen
Comment 6 2019-07-31 17:43:23 PDT
Comment on attachment 375272 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375272&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/FirstVisuallyNonEmptyMilestone.mm:125 > + [configuration setAllowsInlineMediaPlayback:YES]; This obviously doesn't exist on Mac. Once it builds, r=me
Simon Fraser (smfr)
Comment 7 2019-07-31 17:54:17 PDT
Comment on attachment 375272 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375272&action=review > Source/WebCore/ChangeLog:21 > + In order for these HTMLDocument subclasses to be considered visually non-empty before they > + finish loading they must render something that exceeds the visual character or pixel I don' know if these media document should even do any throttling. Why don't we just not throttle them?
Andy Estes
Comment 8 2019-07-31 18:05:04 PDT
(In reply to Simon Fraser (smfr) from comment #7) > Comment on attachment 375272 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=375272&action=review > > > Source/WebCore/ChangeLog:21 > > + In order for these HTMLDocument subclasses to be considered visually non-empty before they > > + finish loading they must render something that exceeds the visual character or pixel > > I don' know if these media document should even do any throttling. Why don't > we just not throttle them? Video documents are pretty flashy otherwise. You see the video element start out at a default size then resize once the video metadata loads. You also see a lot of media control flashiness.
Andy Estes
Comment 9 2019-07-31 19:51:47 PDT
WebKit Commit Bot
Comment 10 2019-07-31 21:25:08 PDT
Comment on attachment 375280 [details] Patch Clearing flags on attachment: 375280 Committed r248095: <https://trac.webkit.org/changeset/248095>
WebKit Commit Bot
Comment 11 2019-07-31 21:25:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.